--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: Sanghoon Kim
-theme: cinder
+theme:
+    name: null
+    custom_dir: 'cinder/'
 copyright: 2017-2021 Sanghoon Kim
 google_analytics: ['UA-92730995-2', 'seiker.kr']
 nav:
