--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout master
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Build and deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@nomaterial
