refactor: apply poetry for deps management

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,12 @@
 site_name: Sanghoon Kim
 theme:
-    name: null
-    custom_dir: 'cinder/'
+  name: null
+  custom_dir: "cinder/"
+  analytics:
+    gtag: G-8XG3Q1RGE7
 copyright: 2017-2023 Sanghoon Kim
-google_analytics: ['UA-92730995-2', 'seiker.kr']
 nav:
-    - Home: index.md
-    - My Postings: https://blog.seiker.kr
+  - Home: index.md
+  - My Postings: https://blog.seiker.kr
 markdown_extensions:
-    - pymdownx.tilde:
+  - pymdownx.tilde:
