--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
       - name: Export to requirements.txt
-        run: pip freeze > requirements.txt
+        run: poetry export --without-hashes --format=requirements.txt > requirements.txt
 
       - name: Build and deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@nomaterial
@@ -43,4 +43,3 @@ jobs:
           CUSTOM_DOMAIN: seiker.kr
           CONFIG_FILE: mkdocs.yml
           EXTRA_PACKAGES: build-base
-          REQUIREMENTS: requirements.txt
